refactor: 닉네임 동기화 완료, List 깡통 리팩토링 진행 중